--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>JustDo.It</title>
+    <link
+      rel="shortcut icon"
+      href="./assets/checkWhite.svg"
+      type="image/x-icon"
+    />
   </head>
   <body></body>
 </html>
