--- a/src/template.html
+++ b/src/template.html
@@ -29,7 +29,7 @@
     </header>
     <div class="content"></div>
     <footer>
-      <button type="button" class="button">
+      <button type="button" class="git-redirect-btn button">
         <svg
           width="24"
           height="24"
